update cloud computing

--- a/Intro_cloud_computing.ipynb
+++ b/Intro_cloud_computing.ipynb
@@ -54,7 +54,7 @@
     "\n",
     "Another advantage of cloud computing is the ability to do large computations without the need to build an HPC system. It is very costly to build a HPC cluster, requiring a large amount of up-front funding. Cloud computing, on the other hand, can be used on an as-needed basis, meaning that users need only pay for the computation and data access that they use, without the need to pay a large amount up front for the hardware.\n",
     "\n",
-    "We have the Pangeo community to thank for promoting cloud computing for earth and environmental science. Pangeo is a very welcoming community, and is all about open science, open-source software, open data, and supporting analysis of big datasets. Many of the notebooks in the COESSING JuptyerHub are taken from the large bank of examples in the [Pangeo Gallery](https://gallery.pangeo.io), which I encourage you to look at if you want to dive into cloud computing even more!"
+    "We have the Pangeo community to thank for promoting cloud computing in earth and environmental science. Pangeo is a very welcoming community, and is all about open science, open-source software, open data, and supporting analysis of big datasets. Many of the notebooks in the COESSING JuptyerHub are taken from the large bank of examples in the [Pangeo Gallery](https://gallery.pangeo.io), which I encourage you to look at if you want to dive into cloud computing even more!"
    ]
   },
   {
@@ -68,7 +68,26 @@
     "3. **Cost-effectiveness:** cloud computing remove the need to build hardware locally, which would require large start-up costs. Instead, costs for computations and data storage are calculated on demand. (*Note: The COESSING JupyterHub is freely available for all COESSING participants due to the generous contributions from the nonprofit organization [2i2c](https://2i2c.org).*)\n",
     "4. **Collaboration:** if everyone accesses datasets from the same centralized location on the same platform, this makes collaboration with colleagues much simpler\n",
     "\n",
-    "All of these benefits are particularly relevant to scientists in West Africa, where funding and internet bandwidth can be very limited compared to, e.g., their US and European counterparts. The COESSING JupyterHub this year is meant to introduce you all to cloud computing, and to trial usage among West African scientists. We are so happy that you are interested in helping us test this out, and we welcome any and all feedback on the Slack channel #python-2021.\n",
+    "All of these benefits are particularly relevant to scientists in West Africa, where funding and internet bandwidth can be very limited compared to, e.g., their US and European counterparts. The COESSING JupyterHub this year is meant to introduce you all to cloud computing, and to trial usage among West African scientists. We are so happy that you are interested in helping us test this out, and we welcome any and all feedback on the Slack channel #python-2021."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Some challenges of cloud computing\n",
+    "\n",
+    "While there are some clear benefits to cloud computing, there are some challenges as well. A couple such challenges include:\n",
+    "\n",
+    "1. **Cloud-optimzed data:** cloud providers use object storage instead of regular file systems that we are used to on our personal computers. Most datasets are optimized for standard filesystem storage, and so need some re-working to function in object storage.\n",
+    "2. **Funding:** cloud computing requires a different funding model than traditional academic funding (at least in places like the US)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## More info\n",
     "\n",
     "If you would like to read more about cloud computing in the earth and environmental sciences, here are a few resources (most of these are Pangeo-focused, but Pangeo works with many groups, including NASA, NCAR, and many others):\n",
     "\n",
@@ -104,7 +123,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.7.3"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": false,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
