add link to pangeo datasets

--- a/Intro_cloud_computing.ipynb
+++ b/Intro_cloud_computing.ipynb
@@ -68,7 +68,7 @@
     "3. **Cost-effectiveness:** cloud computing remove the need to build hardware locally, which would require large start-up costs. Instead, costs for computations and data storage are calculated on demand. (*Note: The COESSING JupyterHub is freely available for all COESSING participants due to the generous contributions from the nonprofit organization [2i2c](https://2i2c.org).*)\n",
     "4. **Collaboration:** if everyone accesses datasets from the same centralized location on the same platform, this makes collaboration with colleagues much simpler\n",
     "\n",
-    "All of these benefits are particularly relevant to scientists in West Africa, where funding and internet bandwidth can be very limited compared to, e.g., their US and European counterparts. The COESSING JupyterHub this year is meant to introduce you all to cloud computing, and to trial usage among West African scientists. We are so happy that you are interested in helping us test this out, and we welcome any and all feedback on the Slack channel #python-2021."
+    "All of these benefits are particularly relevant to scientists in West Africa, where funding and internet bandwidth can be very limited compared to, e.g., their US and European counterparts. The COESSING JupyterHub this year is meant to introduce you all to cloud computing, and to trial usage among West African scientists. We are so happy that you are interested in helping us test this out, and we welcome any and all feedback on the Slack channel `#python-2021`."
    ]
   },
   {
@@ -97,6 +97,15 @@
     "    - [Pangeo gallery](https://gallery.pangeo.io)\n",
     "- [article about Pangeo and its history](https://medium.com/pangeo/pangeo-2-0-2bedf099582d)\n",
     "- [paper about doing science in the cloud](https://www.computer.org/csdl/magazine/cs/2021/02/09354557/1reXu4gJjri)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Available datasets on COESSING JupyterHub\n",
+    "\n",
+    "The COESSING JupyterHub is set up very similarly to the hub used by many members of the Pangeo community, and so we have access to datasets stored on the cloud via Pangeo! These datasets can be found in the [Pangeo Data Catalog](https://catalog.pangeo.io/browse/master/). We will be using the ECCO v4 [dataset](https://catalog.pangeo.io/browse/master/ocean/ECCOv4r3/) in some python tutorials during COESSING 2021!"
    ]
   },
   {
@@ -136,7 +145,7 @@
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
