--- a/ECCO_example_calculations_SSH.ipynb
+++ b/ECCO_example_calculations_SSH.ipynb
@@ -21,6 +21,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Uncomment the line below \"pip install ecco_v4_py\" (by deleting the \"#\") if you need to install ecco_v4_py (see blue note below)\n",
+    "# Note that a lot of lines of text will appear when you run this - just wait until it is done and you see a line near the end that says \"Successfully installed\".\n",
+    "#pip install ecco_v4_py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import numpy as np # numerical python\n",
     "import xarray as xr # for handling multi-dimensional arrays\n",
     "import matplotlib.pyplot as plt # for plotting\n",
@@ -28,6 +39,14 @@
     "\n",
     "import warnings \n",
     "warnings.filterwarnings('ignore') # to remove warning messages"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-info\">\n",
+    "<b>Note:</b> If you get an error that the package `ecco_v4_py` could not be found, then uncomment the line above the import statement to install the package via `pip install ecco_v4_py`. That line needs to be run each time you log back into the Hub.</div>"
    ]
   },
   {
@@ -432,22 +451,16 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3.8.2 64-bit",
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": ""
   },
   "toc": {
    "base_numbering": 1,
